fixed the overlap on the third column, looks right now

--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,18 @@
 /*main.css*/
+
 h3 {
     margin-top: 0px;
 }
+
 #mBody {
-	width: 900px;
+	width: 66%;
     margin-left: auto ;
     margin-right: auto ;
     margin-top: 117px;
     padding-top: 10px;
 	border-top: 1px solid #000;
 }
+
 #mBody a {
   color: inherit;
   text-decoration: inherit;
@@ -33,43 +36,32 @@ h3 {
 }
 
 .pcolumn {
-    float: left;
-    position: relative;
-    width: 299px;
-  
-    /*for demo purposes only */
-    /*background: #f1f1f1;*/
+    width: calc(50% - 5px);
+    display: inline-block;
     padding: 5px;
     box-sizing: border-box;
 
 }
 
 .ocolumn {
-    float: left;
-    position: relative;
-    width: 350px;
-  
-    /*for demo purposes only */
-    /*background: #f5f5f5;*/
+    width: calc(50% - 7px);
+    display: inline-block;
+    vertical-align: top;
     padding: 5px;
     border-left: 1px solid #d6d6d6;
-    /*border-right: 1px solid #d6d6d6;*/
     box-sizing: border-box;
 
 }
 
 .scolumn {
-    float: right;
-    position: relative;
-    width: 250px;
-  
-    /*for demo purposes only */
-    /*background: #f3f3f3;*/
+    width: calc(32% - 7px);
+    margin: 0 !important;
+    display: inline-block;
+    vertical-align: top;
     padding: 5px;
     border-left: 1px solid #d6d6d6;
     border-right: 1px solid #d6d6d6;
     box-sizing: border-box;
-
 }
 
 .miniPArticle, .miniOArticle, .miniSArticle {
@@ -77,24 +69,22 @@ h3 {
 }
 
 .miniPArticle {
-	width: 290px;
-    border-bottom: 1px solid #d6d6d6;
+	width: 100%;
+  border-bottom: 1px solid #d6d6d6;
 }
 .miniOArticle {
-	width: 340px;
+	width: 100%;
     border-bottom: 1px solid #d6d6d6;
 }
 .miniSArticle {
-	width: 240px;
+	width: 100%;
     border-bottom: 1px solid #d6d6d6;
 }
 
 .author {
 	font-size: 12px;
-    /*float: left;*/
 }
 .description {
-    /*float: left;*/
 }
 .caption {
     float: right;
