--- a/css/navbar.css
+++ b/css/navbar.css
@@ -29,7 +29,7 @@
 #header {
     z-index: 5;
 	position: fixed;
-	width: 900px;
+	width: 66%;
 	margin-left: auto;
     margin-right: auto;
     top: 0px;
